# click-native-completions

./: .pre-commit-config.yaml  setup.cfg
src/click_native_completions/: __init__.py  _common.py  bash_impl.py  zsh_impl.py
