[metadata]
name = click-native-completions
version = 0.1.0
description = Shell-native completion support for 'click' CLIs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sirosen/click-native-completions
author = Stephen Rosen
author_email = sirosen@uchicago.edu

[options]
python_requires = >=3.6.2
install_requires = click
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[isort]
profile = black

[flake8]
exclude = .git,.tox,__pycache__,.eggs,dist,.venv*,build
max-line-length = 88
ignore = W503,W504


[mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
no_implicit_optional = true
